tooling/nargo_cli/tests/snapshots/execution_success/databus_two_calldata_simple/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "idx",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "databus"
      },
      {
        "name": "z",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "databus"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "databus"
    },
    "error_types": {
      "9579943917905940306": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _10",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "BLACKBOX::RANGE [(_3, 32)] []",
    "BLACKBOX::RANGE [(_4, 32)] []",
    "BLACKBOX::RANGE [(_5, 32)] []",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "INIT CALLDATA 0 (id: 2, len: 2, witnesses: [_1, _2])",
    "MEM (id: 2, read at: EXPR [ (1, _0) 0 ], value: EXPR [ (1, _8) 0 ]) ",
    "INIT CALLDATA 1 (id: 4, len: 4, witnesses: [_3, _4, _5, _6])",
    "MEM (id: 4, read at: EXPR [ (1, _0) 0 ], value: EXPR [ (1, _9) 0 ]) ",
    "EXPR [ (1, _8) (1, _9) (-1, _10) 0 ]",
    "BLACKBOX::RANGE [(_10, 32)] []",
    "EXPR [ (1, _7) (-1, _10) 0 ]",
    "INIT RETURNDATA (id: 3, len: 1, witnesses: [_7])"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": []
}
